<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="btn07">7</string>
    <string name="btn08">8</string>
    <string name="btn09">9</string>
    <string name="btnDV">/</string>
    <string name="btn04">4</string>
    <string name="btn05">5</string>
    <string name="btn06">6</string>
    <string name="btnMX">X</string>
    <string name="btn01">1</string>
    <string name="btn02">2</string>
    <string name="btn03">3</string>
    <string name="btnSUB">-</string>
    <string name="btnCE">CE</string>
    <string name="btnDEC">.</string>
    <string name="btnADD">+</string>
    <string name="btnEQ">=</string>
</resources>